--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
   "scripts": {
     "test": "jest --",
     "test:watch": "jest --watch --",
-    "test:watch-all": "jest --watchAll"
+    "test:watch-all": "jest --watchAll",
+    "lint": "eslint --fix 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@types/node": "^14.14.31",
     "deep-equal": "^2.0.5",
-    "typescript": "^4.2.2",
     "ts-node": "^9.1.1",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@cazoo/eslint-plugin-eslint": "^1.0.2",
     "@types/deep-equal": "^1.0.1",
+    "@types/jest": "^26.0.20",
+    "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "jest-mock-extended": "^1.0.13",
+    "prettier": "^2.5.1",
     "ts-jest": "^26.5.2"
   }
 }
